--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="../dist/public/game-view.js"></script>
+    <link rel="stylesheet" href="/style.css" />
+    <script src="/index.js" type="module"></script>
   </head>
   <body>
     <div id="home-page">
