--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
     <div id="home-page">
       <h1>Tic Tac Toe</h1>
       <main id="game-board">
-        <div id="cell-1" class="cell">5</div>
-        <div id="cell-2" class="cell">5</div>
-        <div id="cell-3" class="cell">5</div>
-        <div id="cell-4" class="cell">5</div>
-        <div id="cell-5" class="cell">5</div>
-        <div id="cell-6" class="cell">5</div>
-        <div id="cell-7" class="cell">5</div>
-        <div id="cell-8" class="cell">5</div>
-        <div id="cell-9" class="cell">5</div>
+        <div id="cell-1" class="cell"></div>
+        <div id="cell-2" class="cell"></div>
+        <div id="cell-3" class="cell"></div>
+        <div id="cell-4" class="cell"></div>
+        <div id="cell-5" class="cell"></div>
+        <div id="cell-6" class="cell"></div>
+        <div id="cell-7" class="cell"></div>
+        <div id="cell-8" class="cell"></div>
+        <div id="cell-9" class="cell"></div>
       </main>
     </div>
   </body>
